--- a/style.css
+++ b/style.css
@@ -68,3 +68,9 @@ body {
   color: white;
   font-size: 50px;
 }
+.chart-container {
+  display: flex;
+  height: 450px;
+  width: 50%;
+  margin-top: 20px;
+}
